active post area

--- a/src/components/AddLink/addLink.sass
+++ b/src/components/AddLink/addLink.sass
@@ -25,6 +25,9 @@
             color: #fff
             &:hover
                 background-color: rgba(11,121,208,1)
+            &:disabled
+                background-color: rgba(0,0,0,0.26)
+                cursor: default
         &__text
             color: $dark-text_color
             font-size: 12px
