--- a/src/components/PostItem/postItem.sass
+++ b/src/components/PostItem/postItem.sass
@@ -18,6 +18,7 @@
             overflow: hidden
             text-overflow: ellipsis
         &__subtitle
+            text-decoration: none
             color: rgba(0, 0, 0, 0.38)
             font-size: 12px
             font-weight: 400
