--- a/src/style/form.sass
+++ b/src/style/form.sass
@@ -33,6 +33,8 @@
         line-height: 19px
         letter-spacing: $base_letter-spacing
         color: $dark-grey_color
+        &:error
+            border: 1px solid #F44336
         &:focus
             outline: none
             border: 2px solid rgb(33, 150, 243)
